--- a/herocorp/package.json
+++ b/herocorp/package.json
@@ -19,19 +19,21 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^7.0.0",
     "@ionic/vue-router": "^7.0.0",
+    "core-js": "^3.6.5",
     "ionicons": "^7.0.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6",
-    "vuetify": "^3.1.12"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@capacitor/cli": "4.7.3",
-    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.3.0",
     "cypress": "^12.7.0",
     "eslint": "^8.35.0",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
+    "typescript": "^4.9.3",
     "vite": "^4.1.0",
     "vitest": "^0.29.2",
     "vue-tsc": "^1.0.24"
